--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,21 @@
 language: ruby
-rvm:
-  - 2.1.4
+
+sudo: false
+
 before_install: gem install bundler -v 1.10.6
+
+script:
+  - t_build.sh
+
+env:
+  - RAILS_VERSION="~> 3.2.22"
+  - RAILS_VERSION="~> 4.0.13"
+  - RAILS_VERSION="~> 4.1.13"
+  - RAILS_VERSION="~> 4.2.4"
+
+rvm:
+  - 1.9.3
+  - 2.0.0
+  - 2.1.4
+  - 2.2.2
+
