--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: ruby
 
-sudo: false
 
 before_install: gem install bundler -v 1.10.6
 
 #run script
 script:
-  - t_build.sh
+  - source t_build.sh
 
 env:
   - RAILS_VERSION="~> 3.2.22"
