--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ language: ruby
 before_install: gem install bundler -v 1.10.6
 
 #run script
-script:
-  - source t_build.sh
+#script:
+#  - source t_build.sh
 
 env:
   - RAILS_VERSION="~> 3.2.22"
